# order-book-aggregator

./: .gitignore  Makefile  Makefile.example.local  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: README.md
src/order_book_aggregator/: __main__.py  cli.py
src/order_book_aggregator/adapters/: __init__.py  exchange_api.py
src/order_book_aggregator/domain/: __init__.py  order_book.py
src/order_book_aggregator/use_cases/: __init__.py  aggregate_order_book_use_case.py  сalculate_execution_price_use_case.py
tests/: conftest.py  test_calculate_execution_price.py  test_cli.py  test_exchange_api.py  test_main.py
tests/benchmarks/: test_bench.py
